- Feature: [#14002] [Plugin] Feature: Use allowed_hosts when checking the binding IP for listening
- Change: [#13346] [Plugin] Renamed FootpathScenery to FootpathAddition, fix typos.
- Change: [#13857] Change Rotation Control Toggle to track element number 256
- Fix: [#4605, #11912] Water palettes are not updated properly when selected in Object Selection.
- Fix: [#9631, #10716] Banners drawing glitches when there are more than 32 on the screen at once.
- Fix: [#11438] Freeze when shrinking map size.
- Fix: [#12895] Mechanics are called to repair rides that have already been fixed.
- Fix: [#13102] Underflow on height chart (Ride measurements).
- Fix: [#13234] Incorrect vehicle mass after using Remove All Guests cheat.
- Fix: [#13236] New ride type appears as new vehicle type in research.
- Fix: [#13257] Rides that are exactly the minimum objective length are not counted.
- Fix: [#13334] Uninitialised variables in CustomTabDesc.
- Fix: [#13342] Rename tabChange to onTabChange in WindowDesc interface.
- Fix: [#13427] Newly created Go-Karts show “Race won by <blank>”.
- Fix: [#13431] [Plugin] UI disabled widgets can still be interacted with.
- Fix: [#13454] Plug-ins do not load on Windows if the user directory contains non-ASCII characters.
- Fix: [#13466] “Build 5 roller coasters” excitement corrupted in Park window.
- Fix: [#13469] Exception thrown from plugin in context.subscribe.
- Fix: [#13477] Plug-in widget tooltips do not work.
- Fix: [#13489] Mechanics continue heading to inspect broken down rides.
- Fix: [#13510] [Plugin] list view scroll resets when items is set.
- Fix: [#13574] Crash when a JSON object does not set `originalId`.
- Fix: [#13832] Players last action position is invalid on opening/closing a ride in multiplayer.
- Fix: [#13937] Pathfinding gets confused when two entrances/exits from the same ride are on top of each other.
- Fix: [#13961] Animation for Guests sliding down Spiral Slide is missing on close zoom levels.